[gd_scene load_steps=10 format=3 uid="uid://b380ltoowsym6"]

[ext_resource type="Script" path="res://scenes/ball/ball.gd" id="1_b150s"]
[ext_resource type="Texture2D" uid="uid://by2pu5a5gmsdp" path="res://assets/ball.png" id="1_t5b0b"]
[ext_resource type="Script" path="res://scenes/root/root.gd" id="1_xtru0"]
[ext_resource type="PackedScene" uid="uid://ow5eptqogl0t" path="res://scenes/player/player.tscn" id="3_ti7x4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vjlun"]
radius = 24.3311

[sub_resource type="CircleShape2D" id="CircleShape2D_qfq6r"]
radius = 25.1794

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xfsj3"]
size = Vector2(22, 1095)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebg3q"]
size = Vector2(27, 1086)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xj5yo"]
size = Vector2(1959, 23)

[node name="Root" type="Node2D"]
script = ExtResource("1_xtru0")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1915.0
offset_bottom = 1086.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(961, 543)

[node name="Ball" type="RigidBody2D" parent="." groups=["ball"]]
position = Vector2(960, 540)
collision_layer = 2
collision_mask = 5
mass = 0.001
gravity_scale = 0.0
linear_damp = 1.0
script = ExtResource("1_b150s")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
scale = Vector2(3, 3)
texture = ExtResource("1_t5b0b")

[node name="Area2D" type="Area2D" parent="Ball"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Area2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_vjlun")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_qfq6r")

[node name="Player" parent="." groups=["Player"] instance=ExtResource("3_ti7x4")]
position = Vector2(1764, 537)

[node name="Area2D_Left" type="Area2D" parent="." groups=["Left_wall"]]
position = Vector2(-28, 0)
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Left"]
position = Vector2(67, 537.5)
shape = SubResource("RectangleShape2D_xfsj3")

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D_Left"]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Left/StaticBody2D"]
position = Vector2(53.5, 533)
shape = SubResource("RectangleShape2D_ebg3q")

[node name="Area2D_Right" type="Area2D" parent="." groups=["Right_wall"]]
position = Vector2(1918, 5)
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Right"]
position = Vector2(1, 537.5)
shape = SubResource("RectangleShape2D_xfsj3")

[node name="Area2D_Top" type="Area2D" parent="." groups=["Top_wall"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Top"]
position = Vector2(969.5, 1.5)
shape = SubResource("RectangleShape2D_xj5yo")

[node name="Area2D_Bottom" type="Area2D" parent="." groups=["Bottom_wall"]]
position = Vector2(-13, 1078)
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Bottom"]
position = Vector2(969.5, 1.5)
shape = SubResource("RectangleShape2D_xj5yo")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D_Left" to="." method="_on_area_2d_left_body_entered"]
[connection signal="body_entered" from="Area2D_Top" to="." method="_on_area_2d_top_body_entered"]
[connection signal="body_entered" from="Area2D_Bottom" to="." method="_on_area_2d_bottom_body_entered"]
